K8s Manifest/Services/Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: python-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      # - path: /hello-world-one(/|$)(.*)
      #   pathType: Prefix
      #   backend:
      #     service:
      #       name: aks-helloworld-one
      #       port:
      #         number: 80
      # - path: /hello-world-two(/|$)(.*)
      #   pathType: Prefix
      #   backend:
      #     service:
      #       name: aks-helloworld-two
      #       port:
      #         number: 80
      - path: /
        pathType: Prefix
        backend:
          service:
            name: python-app-service
            port:
              number: 80

      # U can add more options, but in this project we just needed one for demonstration
